fix: remove extra space on list view search

--- a/assets/src/css/media-library.scss
+++ b/assets/src/css/media-library.scss
@@ -164,11 +164,6 @@ $media-library-active-folder: #f5f5f5;
 		gap: 12px 0;
 		padding: 6px 10px;
 
-		#media-search-input {
-			padding-left: 36px;
-		}
-
-
 		.actions {
 			display: flex;
 			gap: 0.75rem;
